kubernetes/apps/production/znc/inroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: znc-auth
  namespace: vpn
spec:
  forwardAuth:
    address: https://znc.justsem.org/outpost.goauthentik.io/auth/traefik
    authResponseHeaders:
    - X-authentik-username
    - X-authentik-groups
    - X-authentik-email
    - X-authentik-name
    - X-authentik-uid
    - X-authentik-jwt
    - X-authentik-meta-jwks
    - X-authentik-meta-outpost
    - X-authentik-meta-provider
    - X-authentik-meta-app
    - X-authentik-meta-version
    trustForwardHeader: true
---
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: sonarr-traefik-ingress
#  namespace: vpn
#spec:
#  entryPoints:
#    - websecure
#    - web
#  routes:
#    - match: Host(`sonarr.justsem.org`)
#      kind: Rule
#      priority: 10
#      middlewares:
#        - name: sonarr-auth
#          namespace: vpn
#        - name: security-headers
#          namespace: vpn
##        - name: sonarr-theme
##          namespace: vpn
#      services:
#        - kind: Service
#          name: sonarr
##          passHostHeader: true
#          namespace: vpn
#          port: 8989
#    - match: Host(`sonarr.justsem.org`) && PathPrefix(`/outpost.goauthentik.io/`)
#      kind: Rule
#      priority: 15
#      services:
#        - kind: Service
#          name: ak-outpost-vpn
#          port: 9000
#  tls:
#    secretName: sonarr-cert
