kubernetes/apps/production/znc/tcpingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: znc-raw
  namespace: vpn

spec:
  entryPoints:
    - znc
  routes:
  - match: HostSNI(`*`)
    services:
    - name: znc
      port: 6697
  tls:
    passthrough: true
